# gpauloski.github.io

./: .gitignore  .pre-commit-config.yaml  CNAME  README.md  _config.yml  index.md  pubs.bib  pyproject.toml  requirements-dev.txt  setup.cfg  tox.ini
.github/workflows/: check.yml  deploy.yml
_layouts/: default.html
_sass/: _style.scss  typography.scss  vars.scss
builder/: __init__.py  __main__.py  config.py  main.py  presentations.py  publications.py  render.py  theses.py
config/: config.toml
config/presentations/: escience24-taps.json  gcasr2023-proxystore.json  gcasr23-proxystore.json  gcasr25-academy.json  hppss24-proxystore.json  hust24-compute.json  jlesc25-academy.json  masters.json  parslfest22-proxystore.json  parslfest23-proxystore.json  parslfest24-taps.json  parslfest25-academy.json  sc20-kfac.json  sc21-kaisa.json  sc23-proxystore.json  sc24-doctoral.json  taccster18-poster.json  taccster2018.json
config/publications/: README.md  ananthakrishnan2024compute.json  bauer2024containers.json  chard2026workflows.json  gates2019glioma.json  gokdemir2025hiperrag.json  gonthier2025drex.json  hayotsasson2025aero.json  hong2021moleculesnlp.json  hong2023scholarbert.json  hudson2023trillion.json  hudson2024flight.json  kamatar2026academy.json  nvidia2026nemotron-super.json  nvidia2026nemotron-ultra.json  pauloski2020kfac.json  pauloski2021kaisa.json  pauloski2022kfac.json  pauloski2023proxystore.json  pauloski2024accelerating.json  pauloski2024proxystore.json  pauloski2024taps.json  pauloski2025academy.json  pauloski2025agents.json  proxystore2024proxystore.json  sun2025compso.json  ward2021colmena.json  ward2023colmena.json  ward2024colmena.json  yan2025mofa.json  zhang2019aggregating.json  zhang2020compressed.json  zhou2025wrath.json  zvyagin2022genslm.json
config/theses/: pauloski2022masters.json  pauloski2025doctoral.json
content/presentations/: README.md  parslfest22-proxystore.json  sc20-kfac.json  sc21-kaisa.json
content/publications/: README.md  gates2019glioma.json  hong2021moleculesnlp.json  hong2023scholarbert.json  pauloski2020kfac.json  pauloski2021kaisa.json  pauloski2022kfac.json  pauloski2023proxystore.json  ward2020colmena.json  zhang2019aggregating.json  zhang2020compressed.json  zvyagin2022genslm.json
static/: stylesheet.css
static/publications/: pauloski.bib
templates/: icons.html  index.html  presentations.html  projects.html  publications.html  research.html  selected.html  theses.html
