[build-system]
requires = ["setuptools>=64.0", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "builder"
version = "0.0.1"
authors = [
    {name = "Greg Pauloski", email = "jgpauloski@uchicago.edu"},
]
description = "jgpauloski@uchicago.edu"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "bibtexparser==1.4.1",
    "Jinja2",
    "markdown",
]

[project.urls]
homepage = "https://gregpauloski.com"
repository = "https://github.com/gpauloski/gpauloski.github.io"

[project.optional-dependencies]
dev = [
    "mypy",
    "pre-commit",
    "ruff",
    "tox",
    "virtualenv",
]

[tool.codespell]
skip = """
.git,
.github,
__pycache__,
build,
dist,
.*egg-info,
config/theses/pauloski2022masters.json,
static/publications/pauloski.bib,
"""
ignore-words-list = "theses,THESES"

[tool.coverage.run]
plugins = ["covdefaults"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.ruff]
line-length = 79
target-version = "py311"

[tool.ruff.lint]
# pycodestyle, pyflakes, flake8-builtins, flake8-bugbear, isort, pep8-naming,
# pydocstyle, flake8-debugger, flake8-commas
select = ["E", "F", "A", "B", "I", "N", "D", "T10", "COM"]
extend-ignore = ["D10"]

[tool.ruff.lint.isort]
force-single-line = true
known-first-party = ["builder"]
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.setuptools.packages.find]
exclude = ["tests*", "testing*"]
namespaces = false
